some files created and updated files

--- a/index.htm
+++ b/index.htm
@@ -57,7 +57,23 @@
 
             <!-- Social Content -->
             <div class="social-content">
-
+                <!-- Social Buttons -->
+                <a href="https://github.com/ruhlanrzayev" target="_blank" class="social-button">
+                    <p class="fa-brands fa-github"></p> 
+                    <p> GitHub Profile</p>
+                </a>
+                <a href="mailto:contactruhlanrzayev@gmail.com" target="_blank" class="social-button">
+                    <p class="fa-solid fa-envelope"></p> 
+                    <p> Gmail Address</p>
+                </a>
+                <a href="https://linkedin.com/in/ruhlanrzayev" target="_blank" class="social-button">
+                    <p class="fa-brands fa-linkedin-in"></p> 
+                    <p> LinkedIn Profile</p>
+                </a>
+                <a href="https://instagram.com/ruhlanrzayev" target="_blank" class="social-button">
+                    <p class="fa-brands fa-instagram"></p> 
+                    <p> Instagram Profile</p>
+                </a>
             </div>
         </div>
     </main>
