--- a/index.htm
+++ b/index.htm
@@ -66,7 +66,7 @@
             <!-- Social Content -->
             <div class="social-content">
                 <!-- Social Buttons -->
-                <a href="images/RuhlanRzayevCV.pdf" target="_blank" class="social-button fa-solid fa-file cv">
+                <a href="images/RuhlanRzayevAZCV.pdf" target="_blank" class="social-button fa-solid fa-file cv">
                 </a>
                 <a href="https://github.com/ruhlanrzayev" target="_blank" class="social-button fa-brands fa-github github">
                 </a>
